# job-tracker

./: .env.example  .gitignore  LICENSE  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py  theme.py
scripts/: seed_demo_data.py
src/jobtracker/: __init__.py  classifier.py  cli.py  config.py  db.py  gmail_client.py  grouping.py  models.py  prefilter.py  states.py  sync.py
tests/: conftest.py  test_classifier.py  test_gmail_client.py  test_grouping.py  test_prefilter.py  test_states.py  test_sync.py
tests/fixtures/: acme_human_reply.txt  ashby_assessment.txt  cold_outreach.txt  comcast_workday_applied.txt  greenhouse_applied.txt  lever_screen.txt  linkedin_alert.txt  staples_rejection.txt
