[project]
name = "jobtracker"
version = "0.1.0"
description = "Email-driven job application tracker: parses Gmail, classifies with a local LLM, visualizes the pipeline."
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "ollama>=0.4",
    "pydantic>=2.5",
    "beautifulsoup4>=4.12",
    "streamlit>=1.35",
    "plotly>=5.18",
    "pandas>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
jobtracker-sync = "jobtracker.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobtracker"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["jobtracker"]

[tool.mypy]
files = ["src"]
strict = true
# google.oauth2 ships py.typed but leaves from_authorized_user_file untyped.
untyped_calls_exclude = ["google.oauth2"]

# The Google API client libraries ship no type stubs; this is the honest
# ceiling of strict checking until upstream publishes them.
[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
